feat: add for crosscheck

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         of type and scrambled it to make a type specimen book. It has survived not only five centuries,
                         but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                 </div>
-                <img class="about__img" src="./img/aboutUs/houseplant 1.jpg" alt="plant">
+                <img class="about__img" src="./img/aboutUs/houseplant1.jpg" alt="plant">
             </div>
         </section>
 
@@ -126,7 +126,7 @@
         <section class="prices" id="price">
             <div class="wrapper wrapper__prices">
                 <div class="prices__tariffs">
-                    <h3 class="tariffs-title">Prices</h3>
+                    <h2 class="tariffs-title">Prices</h2>
                     <div class="tariffs">
                         <!-- <ul> -->
                         <form class="tariff__container">
@@ -155,7 +155,7 @@
                     <div>
                         <button class="button button__prices">Contact us</button>
                     </div>
-                    <img src="./img/prices/leafs (1).jpg" alt="leaf">
+                    <img src="./img/prices/leafs(1).jpg" alt="leaf">
                 </div>
             </div>
 
@@ -164,7 +164,7 @@
             <div class="wrapper ">
                 <h2 class="contacts__title">Contact Us</h2>
                 <div class="wrapper__contacts">
-                 <img class="contacts__img" src="./img/contacts/contact_woman 1.png" alt="woman"> 
+                 <img class="contacts__img" src="./img/contacts/contact_woman1.png" alt="woman"> 
 
 
                 <form class="form__select" >
@@ -188,11 +188,11 @@
                     <a href="https://github.com/Liaaaaaaaaaaa">© 2022 github</a>
                     <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
                     <ul class="network">
-                        <li><a href="https://www.instagram.com/"><img src="./img/icon/inst 1.svg" alt="instagram">
+                        <li><a href="https://www.instagram.com/"><img src="./img/icon/inst1.svg" alt="instagram">
                             </a></li>
-                        <li><a href="https://www.facebook.com/"><img src="./img/icon/fb 1.svg" alt="facebook"></a></li>
-                        <li><a href="https://twitter.com/"><img src="./img/icon/tw 1.svg" alt="twitter"></a></li>
-                        <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest 1.svg"
+                        <li><a href="https://www.facebook.com/"><img src="./img/icon/fb1.svg" alt="facebook"></a></li>
+                        <li><a href="https://twitter.com/"><img src="./img/icon/tw1.svg" alt="twitter"></a></li>
+                        <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest1.svg"
                                     alt="pinterest"></a></li>
                     </ul>
                 </div>
