feat: start 2 part

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="project">
                         <img src="./img/project/first6.jpg" alt="img1">
                         <div class="project__discription">
-                            <div class="project__title">Garden care</div>
+                            <div class="project__title">Planting</div>
                             <p class="project__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
@@ -181,25 +181,24 @@
                
             </div>
         </section>
-
-        <footer class="footer">
-            <div class="wrapper ">
-                <div class="footer__content">
-                    <a href="https://github.com/Liaaaaaaaaaaa">© 2022 github</a>
-                    <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
-                    <ul class="network">
-                        <li><a href="https://www.instagram.com/"><img src="./img/icon/inst1.svg" alt="instagram">
-                            </a></li>
-                        <li><a href="https://www.facebook.com/"><img src="./img/icon/fb1.svg" alt="facebook"></a></li>
-                        <li><a href="https://twitter.com/"><img src="./img/icon/tw1.svg" alt="twitter"></a></li>
-                        <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest1.svg"
-                                    alt="pinterest"></a></li>
-                    </ul>
-                </div>
-            </div>
-        </footer>
-
     </main>
+
+    <footer class="footer">
+        <div class="wrapper ">
+            <div class="footer__content">
+                <a href="https://github.com/Liaaaaaaaaaaa">© 2022 github</a>
+                <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
+                <ul class="network">
+                    <li><a href="https://www.instagram.com/"><img src="./img/icon/inst1.svg" alt="instagram">
+                        </a></li>
+                    <li><a href="https://www.facebook.com/"><img src="./img/icon/fb1.svg" alt="facebook"></a></li>
+                    <li><a href="https://twitter.com/"><img src="./img/icon/tw1.svg" alt="twitter"></a></li>
+                    <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest1.svg"
+                                alt="pinterest"></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
