--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                     <li class="nav__link"> <a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
+            <span class="hamburger">
+                <span class="hamburger__line"></span>
+                <span class="hamburger__line"></span>
+                <span class="hamburger__line"></span>
+                <span class="hamburger__line"></span>
+            </span>   
         </div>
     </header>
     <main>
