feat: adaptive part of the site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <header class="header">
         <div class="wrapper header-wrapper">
-            <a href="#" class="logo"><img src="./img/logo/logo_vector.svg" alt="logo" class="logo__img">Plants</a>
+            <a href="#" class="logo"><img src="./img/logo/logo_vector.svg" alt="logo" class="logo__img">
+                <p class="logo__text">Plants</p>
+            </a>
             <nav class="header__nav">
                 <ul class="nav">
                     <li class="nav__link"><a href="#">Home</a></li>
@@ -32,7 +34,7 @@
                 <span class="hamburger__line"></span>
                 <span class="hamburger__line"></span>
                 <span class="hamburger__line"></span>
-            </span>   
+            </span>
         </div>
     </header>
     <main>
@@ -134,34 +136,29 @@
                 <div class="prices__tariffs">
                     <h2 class="tariffs-title">Prices</h2>
                     <div class="tariffs">
-                        <!-- <ul> -->
                         <form class="tariff__container">
-                            <span class="tariff__text">Basics </span> <select size="1" class="tariff">
-                                    <!-- <option value="Basics"></option> -->
-                                </select>  </form>
+                            <span class="tariff__text">Basics </span> <select size="1" class="tariff"></select>
+                        </form>
 
-                                <form class="tariff__container">
-                                    <span class="tariff__text" >Standard </span> <select size="1" class="tariff">
-                                            <!-- <option value="Basics"></option> -->
-                                        </select>  </form>
+                        <form class="tariff__container">
+                            <span class="tariff__text">Standard </span> <select size="1" class="tariff">
+                                <!-- <option value="Basics"></option> -->
+                            </select>
+                        </form>
 
-                                        <form class="tariff__container">
-                                            <span class="tariff__text">Pro care </span> <select size="1" class="tariff">
-                                                    <!-- <option value="Basics"></option> -->
-                                                </select>  </form>
-                        <!-- <li>Basics</li>
-                            <li>Standard</li>
-                            <li>Pro care</li> -->
-                        <!-- </ul> -->
+                        <form class="tariff__container">
+                            <span class="tariff__text">Pro care </span> <select size="1" class="tariff">
+                            </select>
+                        </form>
                     </div>
                 </div>
                 <div class="help">
                     <div class="help__title">Our best <span class="color_add">gardeners </span>are ready to help you
                     </div>
-                    <div>
+                    <!-- <div> -->
                         <button class="button button__prices">Contact us</button>
-                    </div>
-                    <img src="./img/prices/leafs(1).jpg" alt="leaf">
+                    <!-- </div> -->
+                    <img class="prices__img" src="./img/prices/leafs(1).jpg" alt="leaf">
                 </div>
             </div>
 
@@ -170,21 +167,21 @@
             <div class="wrapper ">
                 <h2 class="contacts__title">Contact Us</h2>
                 <div class="wrapper__contacts">
-                 <img class="contacts__img" src="./img/contacts/contact_woman1.png" alt="woman"> 
+                    <img class="contacts__img" src="./img/contacts/contact_woman1.png" alt="woman">
 
 
-                <form class="form__select" >
-                    <span class="contacts__text">City</span> 
-                    <select class="contacts__select" size="1" name="City" id="City">
-                        <option value="City">City</option>
-                        <option value="Canandaigua, NY">Canandaigua, NY</option>
-                        <option value="New York City">New York City</option>
-                        <option value="Yonkers, NY">Yonkers, NY</option>
-                        <option value="Sherrill, NY">Sherrill, NY</option>
-                    </select>
-                </form>  
+                    <form class="form__select">
+                        <span class="contacts__text">City</span>
+                        <select class="contacts__select" size="1" name="City" id="City">
+                            <option value="City">City</option>
+                            <option value="Canandaigua, NY">Canandaigua, NY</option>
+                            <option value="New York City">New York City</option>
+                            <option value="Yonkers, NY">Yonkers, NY</option>
+                            <option value="Sherrill, NY">Sherrill, NY</option>
+                        </select>
+                    </form>
                 </div>
-               
+
             </div>
         </section>
     </main>
@@ -199,8 +196,8 @@
                         </a></li>
                     <li><a href="https://www.facebook.com/"><img src="./img/icon/fb1.svg" alt="facebook"></a></li>
                     <li><a href="https://twitter.com/"><img src="./img/icon/tw1.svg" alt="twitter"></a></li>
-                    <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest1.svg"
-                                alt="pinterest"></a></li>
+                    <li><a href="https://www.pinterest.com/"><img src="./img/icon/pinterest1.svg" alt="pinterest"></a>
+                    </li>
                 </ul>
             </div>
         </div>
