feat: finished adaptive

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <footer class="footer">
         <div class="wrapper ">
             <div class="footer__content">
-                <a href="https://github.com/Liaaaaaaaaaaa">© 2022 github</a>
+                <a class="github__text" href="https://github.com/Liaaaaaaaaaaa">© 2022 github</a>
                 <a href="https://rs.school/js-stage0/">Rolling Scopes School</a>
                 <ul class="network">
                     <li><a href="https://www.instagram.com/"><img src="./img/icon/inst1.svg" alt="instagram">
