feat: open burger menu

--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
 
 <body>
     <header class="header">
-        <div class="wrapper header-wrapper">
-            <a href="#" class="logo"><img src="./img/logo/logo_vector.svg" alt="logo" class="logo__img">
-                <p class="logo__text">Plants</p>
-            </a>
-            <nav class="header__nav">
-                <ul class="nav">
+        <div class="wrapper header-wrapper ">
+            <div>
+                <a href="#" class="logo"><img src="./img/logo/logo_vector.svg" alt="logo" class="logo__img">
+                    <p class="logo__text">Plants</p>
+                </a>
+            </div>
+            <nav class="header__nav ">
+                <ul class="nav ">
+                    <div class="header__item">
+                        <a href="#" class="logo"><img src="./img/logo/logo_vector.svg" alt="logo" class="logo__img">
+                            <p class="logo__text">Plants</p>
+                        </a>
+                        <div class="burger-cross">x</div>
+                    </div>
                     <li class="nav__link"><a href="#">Home</a></li>
                     <li class="nav__link"><a href="#aboutUs">About us</a></li>
                     <li class="nav__link"><a href="#project">Service</a></li>
@@ -156,7 +164,7 @@
                     <div class="help__title">Our best <span class="color_add">gardeners </span>are ready to help you
                     </div>
                     <!-- <div> -->
-                        <button class="button button__prices">Contact us</button>
+                    <button class="button button__prices">Contact us</button>
                     <!-- </div> -->
                     <img class="prices__img" src="./img/prices/leafs(1).jpg" alt="leaf">
                 </div>
@@ -203,9 +211,7 @@
         </div>
     </footer>
 
-
-
-
+    <script src="./index.js"></script>
 
 </body>
 
