add focus service

--- a/index.html
+++ b/index.html
@@ -113,13 +113,12 @@
 
                     <div class="project">
                         <img src="./img/project/first4.jpg" alt="img1">
-                        <div class="project-planting">
-                            <div class="project__discription">
+                        <div class="project-planting project__discription">
                                 <div class="project__title">Planting</div>
                                 <p class="project__text">Lorem Ipsum has been the industry</p>
-                            </div>
                         </div>
                     </div>
+
                     <div class="project">
                         <img src="./img/project/first5.jpg" alt="img1">
                         <div class="project__discription">
