--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     <div class="project">
                         <img src="./img/project/first4.jpg" alt="img1">
                         <div class="project-planting project__discription">
-                                <div class="project__title">Planting</div>
-                                <p class="project__text">Lorem Ipsum has been the industry</p>
+                            <div class="project__title">Planting</div>
+                            <p class="project__text">Lorem Ipsum has been the industry</p>
                         </div>
                     </div>
 
@@ -143,19 +143,59 @@
                 <div class="prices__tariffs">
                     <h2 class="tariffs-title">Prices</h2>
                     <div class="tariffs">
-                        <form class="tariff__container">
+                        <!-- <form class="tariff__container">
                             <span class="tariff__text">Basics </span> <select size="1" class="tariff"></select>
+                        </form> -->
+                        <form class="tariff__container ">
+                            <div class=" tarif__title ">
+                                <span class="tariff__text">Basics </span>
+                                <div class="tariff"></div>
+                            </div>
+                            <div class="none ">
+                                <div class="active__line"></div>
+                                <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
+                                    more recently</p>
+                                <p class="activ__cost">
+                                    <span class="cost__title">$15</span>
+                                    <span class="cost__text">/ per hour</span>
+                                </p>
+                                <button class="button__cost"><a href="#contacts">Order</a></button>
+                            </div>
                         </form>
 
-                        <form class="tariff__container">
-                            <span class="tariff__text">Standard </span> <select size="1" class="tariff">
-                                <!-- <option value="Basics"></option> -->
-                            </select>
+
+                        <form class="tariff__container ">
+                            <div class=" tarif__title ">
+                                <span class="tariff__text">Standart </span>
+                                <div class="tariff"></div>
+                            </div>
+                            <div class="none ">
+                                <div class="active__line"></div>
+                                <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
+                                    more recently</p>
+                                <p class="activ__cost">
+                                    <span class="cost__title">$25</span>
+                                    <span class="cost__text">/ per hour</span>
+                                </p>
+                                <button class="button__cost"><a href="#contacts">Order</a></button>
+                            </div>
                         </form>
 
-                        <form class="tariff__container">
-                            <span class="tariff__text">Pro care </span> <select size="1" class="tariff">
-                            </select>
+                        <form class="tariff__container ">
+                            <div class=" tarif__title ">
+                                <span class="tariff__text">Pro care</span>
+                                <div class="tariff"></div>
+                            </div>
+                            <div class="none ">
+                                <div class="active__line"></div>
+                                <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
+                                    more recently</p>
+                                <p class="activ__cost">
+                                    <span class="cost__title">$35</span>
+                                    <span class="cost__text">/ per hour</span>
+                                </p>
+                                <button class="button__cost"><a href="#contacts">Order</a></button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -170,8 +210,8 @@
             </div>
 
         </section>
-        <section class="Contact-us" id="contacts">
-            <div class="wrapper ">
+        <section class="Contact-us"  id="contacts">
+            <div class="wrapper">
                 <h2 class="contacts__title">Contact Us</h2>
                 <div class="wrapper__contacts">
                     <img class="contacts__img" src="./img/contacts/contact_woman1.png" alt="woman">
