--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 <span class="tariff__text">Basics </span>
                                 <div class="tariff"></div>
                             </div>
-                            <div class="none ">
+                            <div class="none-prise ">
                                 <div class="active__line"></div>
                                 <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
                                     more recently</p>
@@ -169,7 +169,7 @@
                                 <span class="tariff__text">Standart </span>
                                 <div class="tariff"></div>
                             </div>
-                            <div class="none ">
+                            <div class="none-prise">
                                 <div class="active__line"></div>
                                 <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
                                     more recently</p>
@@ -186,7 +186,7 @@
                                 <span class="tariff__text">Pro care</span>
                                 <div class="tariff"></div>
                             </div>
-                            <div class="none ">
+                            <div class="none-prise">
                                 <div class="active__line"></div>
                                 <p class="activ__text">Release of Letraset sheets containing Lorem Ipsum passages, and
                                     more recently</p>
@@ -210,22 +210,62 @@
             </div>
 
         </section>
-        <section class="Contact-us"  id="contacts">
+        <section class="Contact-us" id="contacts">
             <div class="wrapper">
                 <h2 class="contacts__title">Contact Us</h2>
                 <div class="wrapper__contacts">
                     <img class="contacts__img" src="./img/contacts/contact_woman1.png" alt="woman">
 
 
-                    <form class="form__select">
-                        <span class="contacts__text">City</span>
-                        <select class="contacts__select" size="1" name="City" id="City">
-                            <option value="City">City</option>
-                            <option value="Canandaigua, NY">Canandaigua, NY</option>
-                            <option value="New York City">New York City</option>
-                            <option value="Yonkers, NY">Yonkers, NY</option>
-                            <option value="Sherrill, NY">Sherrill, NY</option>
-                        </select>
+                    <form>
+
+                        <div class="form__select">
+                            <div class="select__title ">
+                                <span class="select__text">City</span>
+                                <span class="select__button "></span>
+                                <!-- button__active -->
+                            </div>
+                            <div class="none-contacts ">
+                                <!-- container__active -->
+                                <div class="option">Canandaigua, NY</div>
+                                <div class="option">New York City</div>
+                                <div class="option">Yonkers, NY</div>
+                                <div class="option">Sherrill, NY</div>
+                            </div>
+                            <div class="none-cards ">
+                                <div class="cardCity__text">
+                                    <span>City:</span>
+                                    <span class="none canandaigua">Canandaigua, NY</span>
+                                    <span class="none newYorkCity">New York City</span>
+                                    <span class="none yonkers">Yonkers, NY</span>
+                                    <span class="none sherrill">Sherrill, NY</span>
+                                    <span>Phone:</span>
+                                    <span class="none canandaigua">+1 585 393 0001</span>
+                                    <span class="none newYorkCity">+1 212 456 0002</span>
+                                    <span class="none yonkers">+1 914 678 0003</span>
+                                    <span class="none sherrill">+1 315 908 0004</span>
+                                    <span>Office adress:</span>
+                                    <span class="none canandaigua">151 Charlotte Street</span>
+                                    <span class="none  newYorkCity">9 East 91st Street</span>
+                                    <span class="none yonkers">511 Warburton Ave</span>
+                                    <span class="none sherrill">14 WEST Noyes BLVD</span>
+                                </div>
+                                <div class="cardCity__button">
+                                    <button class="buttonCardCity">
+                                        <a href=”tel:+158539300017”>Call us</a></button>
+                                </div>
+                            </div>
+
+                            <!-- <select class="contacts__select " size="1" name="City" id="City"> 
+                                <option disabled selected hidden class="option" value="City">City 
+                                </option> -->
+                            <!-- <option  class="option" value="Canandaigua, NY">Canandaigua, NY</option>
+                                <option class="option" value="New York City">New York City</option>
+                                <option class="option"value="Yonkers, NY">Yonkers, NY</option>
+                                <option class="option"value="Sherrill, NY">Sherrill, NY</option> -->
+                            <!-- </select> -->
+                        </div>
+
                     </form>
                 </div>
 
