feat: add width Call us

--- a/index.html
+++ b/index.html
@@ -245,7 +245,11 @@
                                 </div>
                                 <div class="cardCity__button">
                                     <button class="buttonCardCity">
-                                        <a href=”tel:+158539300017”>Call us</a></button>
+                                        <a href=”tel:+158539300017”>
+                                            <p>Call us</p>
+                                        </a>
+                                    </button>
+
                                 </div>
                             </div>
                         </div>
