--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="help">
                     <div class="help__title">Our best <span class="color_add">gardeners </span>are ready to help you
                     </div>
-                    <button class="button button__prices">Contact us</button>
+                    <button class="button button__prices"><a href="#contacts">Contact us</a></button>
                     <img class="prices__img" src="./img/prices/leafs(1).jpg" alt="leaf">
                 </div>
             </div>
@@ -245,8 +245,7 @@
                                 </div>
                                 <div class="cardCity__button">
                                     <button class="buttonCardCity">
-                                        <a href=”tel:+158539300017”>
-                                            <p>Call us</p>
+                                        <a href=”tel:+158539300017”>Call us
                                         </a>
                                     </button>
 
