feat: add button instead of div prise

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <form class="tariff__container ">
                             <div class=" tarif__title ">
                                 <span class="tariff__text">Basics </span>
-                                <div class="tariff"></div>
+                                <button type="button" class="tariff"></button>
                             </div>
                             <div class="none-prise ">
                                 <div class="active__line"></div>
@@ -164,7 +164,7 @@
                         <form class="tariff__container ">
                             <div class=" tarif__title ">
                                 <span class="tariff__text">Standart </span>
-                                <div class="tariff"></div>
+                                <button type="button" class="tariff"></button>
                             </div>
                             <div class="none-prise">
                                 <div class="active__line"></div>
@@ -181,7 +181,7 @@
                         <form class="tariff__container ">
                             <div class=" tarif__title ">
                                 <span class="tariff__text">Pro care</span>
-                                <div class="tariff"></div>
+                                <button type="button" class="tariff"></button>
                             </div>
                             <div class="none-prise">
                                 <div class="active__line"></div>
